--- a/android/build.gradle
+++ b/android/build.gradle
@@ -49,9 +49,9 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.facebook.react:react-native:+'
     implementation 'com.android.support:appcompat-v7:23.2.1'
-    implementation(name:'phoneNumber-L-AuthSDK-2.12.1.2', ext: 'aar')
-    implementation(name:'crashshield-2.0.3-release', ext: 'aar')
-    implementation(name:'logger-2.0.3-release', ext: 'aar')
-    implementation(name:'main-2.0.3-release', ext: 'aar')
+    implementation(name:'auth_number_product-2.12.3-log-online-standard-release', ext:'aar')    
+    implementation(name:'crashshield-2.1.4-release', ext:'aar')    
+    implementation(name:'main-2.1.4-release', ext:'aar')    
+    implementation(name:'logger-2.1.4-release', ext:'aar')
     implementation 'com.alibaba:fastjson:1.2.60' // 配置对gson的依赖
 }
