--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-onepass-alibaba-dlxk",
-  "version": "1.0.5",
+  "version": "1.0.7",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yyyyq/react-native-ali-onepass"
+    "url": "git+https://github.com/he-yf/react-native-ali-onepass.git"
   },
   "keywords": [
     "react-native",
