fix： 修复安卓因为maven不支持https 和最低版本compileSdkVersion 30 原因无法编译 。 同时优化文档示例。

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,7 +3,7 @@ buildscript {
     repositories {
         jcenter()
         maven(){ url 'https://maven.aliyun.com/repository/releases' }
-        maven{ url "http://maven.aliyun.com/nexus/content/repositories/releases" }
+        maven{ url "https://maven.aliyun.com/nexus/content/repositories/releases" }
     }
 
     dependencies {
@@ -14,7 +14,7 @@ buildscript {
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 30
     buildToolsVersion "26.0.1"
 
     defaultConfig {
@@ -42,7 +42,7 @@ android {
 repositories {
     mavenCentral()
     maven(){ url 'https://maven.aliyun.com/repository/releases' }
-    maven{ url "http://maven.aliyun.com/nexus/content/repositories/releases" }
+    maven{ url "https://maven.aliyun.com/nexus/content/repositories/releases" }
 }
 
 dependencies {
