--- a/android/build.gradle
+++ b/android/build.gradle
@@ -14,8 +14,8 @@ buildscript {
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "26.0.1"
+    compileSdkVersion 31
+    buildToolsVersion "31.0.0"
 
     defaultConfig {
         minSdkVersion 16
@@ -25,11 +25,6 @@ android {
     }
     lintOptions {
         abortOnError false
-    }
-    repositories {
-        flatDir {
-            dirs 'libs'
-        }
     }
     sourceSets.main.jniLibs.srcDirs=['libs']
 
@@ -49,9 +44,9 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.facebook.react:react-native:+'
     implementation 'com.android.support:appcompat-v7:23.2.1'
-    implementation(name:'auth_number_product-2.13.4-log-online-standard-cuum-release', ext:'aar')    
-    implementation(name:'crashshield-2.1.4-release', ext:'aar')    
-    implementation(name:'main-2.2.3-release', ext:'aar')    
-    implementation(name:'logger-2.2.2-release', ext:'aar')
-    implementation 'com.alibaba:fastjson:1.2.60' // 配置对gson的依赖
+    implementation files('libs/auth_number_product-2.13.4-log-online-standard-cuum-release.aar')
+    implementation files('libs/crashshield-2.1.4-release.aar')
+    implementation files('libs/logger-2.2.2-release.aar')
+    implementation files('libs/main-2.2.3-release.aar')
+    implementation 'com.alibaba:fastjson:1.2.75' // 配置对gson的依赖
 }
