--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
                 android:screenOrientation="behind" />
         <!-- 移动授权⻚ -->
         <activity
-                android:name="com.cmic.sso.sdk.activity.LoginAuthActivity"
+                android:name="com.cmic.sso.sdk.view.LoginAuthActivity"
                 android:configChanges="orientation|keyboardHidden|screenSize"
                 android:launchMode="singleTop"
                 android:screenOrientation="behind"
